grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # Notice that we are configuring Træfɪk to strip the prefix from 
    # the url path with the traefik.frontend.rule.type annotation if
    # you are using paths!
    # traefik.frontend.rule.type: pathprefixstrip
spec:
  rules:
    - host: monitor.thepishoppe.com
      http:
        paths:
        - path: /
          backend:
            serviceName: grafana
            servicePort: 3000
